deploy/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: want-to-read-frontend
spec:
  selector:
    app: want-to-read-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
